Added registration API

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_CONNECTION_STRING=mongodb+srv://admin:ydPZopw5gUNBpGI9@group-1-booking-app-db.el2sbvd.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET_KEY=RuZQbdPWTvivGve5GAP8BRNR5vq16qK8
